<resources>
    <string name="app_name">GoPhillyGo</string>
    <string name="website_host" translatable="false">https://gophillygo.org</string>

    <!-- menu action titles -->
    <string name="menu_search_action">Search</string>
    <string name="menu_action_settings">Settings</string>
    <string name="menu_action_about">About</string>
    <string name="menu_action_events">Go to events</string>
    <string name="menu_action_places">Go to places</string>
    <string name="menu_action_map">See map</string>
    <string name="menu_action_event_place">View Destination</string>

    <!-- place option menu items -->
    <string name="place_not_interested_option">Not interested</string>
    <string name="place_liked_option">Liked</string>
    <string name="place_been_option">Been</string>
    <string name="place_want_to_go_option">Want to go</string>

    <!-- User flags -->
    <string name="place_detail_unset">Been here? Want to go?</string>
    <string name="event_detail_unset">Want to go?</string>
    <string name="place_detail_want_to_go">You want to go here</string>
    <string name="event_detail_want_to_go">You want to go to this</string>
    <string name="place_detail_been">You\'ve been here</string>
    <string name="event_detail_been">You\'ve been to this</string>
    <string name="place_detail_liked">You liked this place</string>
    <string name="event_detail_liked">You liked this event</string>
    <string name="place_detail_not_interested">You\'re not interested</string>
    <string name="event_detail_not_interested">You\'re not interested</string>

    <string name="places_list_title">Places</string>
    <string name="events_list_title">Events</string>

    <!-- filtering -->
    <string name="reset_button">Reset</string>
    <string name="done_button">Done</string>
    <string name="single_filter_button_title">Filter</string>
    <string name="many_filter_button_title">Filters</string>
    <plurals name="filter_button_title">
        <item quantity="one">@string/single_filter_button_title</item>
        <item quantity="other">@string/many_filter_button_title</item>
    </plurals>
    <string name="accessible_filter_button_title">Wheelchair accessible</string>

    <string name="watershed_alliance_label">Alliance for Watershed Education</string>
    <string name="bicycle_activity_label">Cycling</string>

    <string name="nature_category_label">Nature</string>
    <string name="exercise_category_label">Exercise</string>
    <string name="educational_category_label">Educational</string>

    <string name="hiking_activity_label">Hiking</string>
    <string name="water_recreation_activity_label">Water recreation</string>
    <string name="cycling_activity_label">Cycling</string>

    <!-- image carousel -->
    <string name="details_carousel_description">Pictures of the attraction</string>

    <!-- place details -->
    <plurals name="place_upcoming_activities_count">
        <item quantity="one">%d upcoming event</item>
        <item quantity="other">%d upcoming events</item>
    </plurals>

    <string name="distance_with_abbreviated_miles">%s mi</string>

    <string name="place_detail_map_button">Map</string>
    <string name="place_detail_directions_button">Directions</string>
    <string name="place_detail_website_button">Website</string>

    <!-- event details -->
    <string name="event_details_been_want_to_go_label">Want to go?</string>

    <string name="event_detail_multiple_locations_label">This event has multiple destinations.</string>
    <string name="event_detail_multiple_locations_link">LEARN MORE</string>

    <string name="event_detail_map_button">Map</string>
    <string name="event_detail_directions_button">Directions</string>
    <string name="event_detail_website_button">Website</string>

    <string name="event_detail_single_day_time_range">%s • %s - %s</string>
    <string name="event_detail_date_range">%s - %s</string>
    <string name="event_detail_date_start_multiday_events">Now</string>
    <string name="event_detail_add_to_calendar">Add to calendar</string>
    <string name="event_detail_no_calendar">No calendar application is installed.</string>

    <!-- Details description -->
    <string name="detail_description_expand">SHOW MORE</string>
    <string name="detail_description_collapse">SHOW LESS</string>

    <!-- event list -->
    <string name="event_list_item_time_range">%s – %s</string>
    <string name="location_requires_gps">Device does not have GPS, which is needed to get location. Please use a different device.</string>
    <string name="location_gps_needed_rationale">GPS needs to be enabled to find destinations near you.</string>
    <string name="location_fine_permission_rationale">Device location permissions needed to find destinations near you.</string>
    <string name="filter_no_results">No results</string>
    <string name="title_activity_maps">Map</string>

    <!-- map -->
    <string name="map_menu_action_view_list">View list</string>
    <string name="title_activity_places_maps">Places</string>
    <string name="title_activity_events_maps">Events</string>

    <!-- shared resources for user UUID -->

    <!-- the name of the shared preferences file -->
    <string name="user_uuid_shared_preferences_file">gophillygo_user_uuid_shared_preferences</string>
    <!-- the key to the UUID within the shared preferences file -->
    <string name="user_uuid_shared_preferences_key">gophillygo_user_uuid</string>
    <string name="location_network_permission_rationale">Please set location mode to \"High Accuracy\" to receive notifications when places you like or want to go are nearby.</string>
    <string name="channel_description">Nearby GoPhillyGo destinations you like or want to go visit</string>
    <string name="place_nearby_notification">You are near %1$s. Learn more.</string>
    <string name="place_nearby_been_button">I\'m there now</string>
    <string name="home_grid_events">Upcoming events</string>
    <string name="general_preference_category">General</string>

    <!-- shared preferences settings key -->
    <string name="general_preferences_key" translatable="false">gophillygo_general_preferences</string>
    <string name="preferences_fine_print_key" translatable="false">gophillygo_preferences_fine_print</string>
    <string name="general_preferences_allow_notifications_key" translatable="false">gophillygo_enable_notifications</string>
    <string name="general_preferences_send_flags_key" translatable="false">gophillygo_send_flags</string>
    <string name="general_preferences_reset_uuid_key" translatable="false">gophillygo_reset_uuid</string>
    <string name="general_preferences_fabric_logging_key" translatable="false">gophillygo_fabric_logging</string>

    <!-- settings -->
    <string name="general_preference_notifications">Notifications</string>
    <string name="general_preference_notifications_summary">Notify me when I\'m near a place I like or want to go.</string>
    <string name="general_preference_fabric_logging">Share crash and usage data</string>
    <string name="general_preference_fabric_logging_summary">Send anonymous reports about how I\'m using the app and when the app crashes.</string>
    <string name="general_preferences_fabric_logging_disabled_notification">Please restart app for setting change to take effect.</string>
    <string name="general_preferences_send_flags">Share selections</string>
    <string name="general_preferences_send_flags_summary">Send us anonymous reports of which destinations and events you have marked as <i>been, liked, want to go,</i> or <i>not interested</i> so we can improve our listings.</string>
    <string name="general_preferences_reset_uuid">Reset anonymous app install ID</string>
    <string name="general_preferences_reset_uuid_summary">Have privacy concerns? Everything we track is anonymous, and you can reset this unique identifier at any time. None of the selections you\'ve made will be lost.</string>
    <string name="general_preferences_reset_uuid_message">Identifier reset to %s</string>
    <string name="preferences_fine_print">Fine print</string>
    <string name="preferences_app_info">About</string>
    <string name="preferences_licences">Licenses</string>
    <string name="preferences_privacy">Privacy policy</string>
    <string name="preferences_terms_of_service">Terms of service</string>
    <string name="preferences">Settings</string>
    <string name="title_activity_search">Search GoPhillyGo</string>
    <string name="search_hint">Place or event</string>
    <string name="search_provider_description">Places and Events around Greater Philadelphia</string>
    <string name="general_preferences_privacy_policy_url" translatable="false">https://gophillygo.org/privacy_policy</string>
    <string name="general_preferences_terms_of_service_url" translatable="false">https://gophillygo.org/terms_of_service</string>
    
    <!-- About page -->
    <string name="title_activity_app_info">About GoPhillyGo</string>
    <string name="app_info_description">The Clean Air Council\'s GoPhillyGo mobile app highlights the greater Philadelphia area\'s best educational and recreational destinations and events. Browse through all the region’s options using a number of activity filters such as biking, hiking, and water recreation, and save places you’d like to go in order to be notified whenever you’re nearby. You can also find upcoming events and add them to your calendar directly from the app. Need help getting there? The app links out to our multimodal trip planner \u2014 combining biking, walking, and public transportation within one trip \u2014 to travel anywhere within the region without the use of a car. If you want to find an outdoor festival taking place this weekend or a place to learn or see something new whenever it’s convenient, we can help!</string>
    <string name="app_info_root_site_link"><a href="https://gophillygo.org">GoPhillyGo website</a></string>
    <string name="app_info_blog_link"><a href="https://gophillygo.org/learn">GoPhillyGo blog</a></string>
    <string name="app_info_cac_link"><a href="https://cleanair.org/">Clean Air Council website</a></string>

    <!-- First launch dialog -->
    <string name="first_launch_dialog_title">Help us improve</string>
    <string name="first_launch_dialog_message">May we collect anonymous usage and crash data from you to improve our app? You can always change this later under the settings.</string>
    <string name="first_launch_dialog_ok_action">Yes, share</string>
    <string name="first_launch_dialog_cancel_action">No</string>

</resources>
