<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/place_option_not_interested"
        android:orderInCategory="1"
        android:title="@string/place_not_interested_option"
        android:icon="@drawable/ic_not_interested_black_24dp"/>

    <item
        android:id="@+id/place_option_liked"
        android:orderInCategory="2"
        android:title="@string/place_liked_option"
        android:icon="@drawable/ic_thumb_up_black_24dp"/>

    <item
        android:id="@+id/place_option_been"
        android:orderInCategory="3"
        android:title="@string/place_been_option"
        android:icon="@drawable/ic_beenhere_black_24dp"/>

    <item
        android:id="@+id/place_option_want_to_go"
        android:orderInCategory="4"
        android:title="@string/place_want_to_go_option"
        android:icon="@drawable/ic_flag_black_24dp"/>
</menu>