<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/events_map_action_view_places"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_place_white_24dp"
        android:title="@string/menu_action_places" />

    <item
        android:id="@+id/events_map_action_view_list"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_view_day_white_24dp"
        android:title="@string/map_menu_action_view_list" />

    <item
        android:id="@+id/events_map_action_map_search"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:title="@string/menu_search_action"
        android:icon="@drawable/ic_search_white_24dp"/>

</menu>