<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:title="@string/menu_search_action"
        android:icon="@drawable/ic_search_white_24px"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="2"
        app:showAsAction="never"
        android:title="@string/menu_action_settings"/>

    <item
        android:id="@+id/action_about"
        android:orderInCategory="3"
        app:showAsAction="never"
        android:title="@string/menu_action_about"/>

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="4"
        app:showAsAction="never"
        android:title="@string/menu_action_logout"/>
</menu>