<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_event_place"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_place_white_24dp"
        android:title="@string/menu_action_event_place"/>

    <item
        android:id="@+id/action_event_map"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_map_white_24dp"
        android:title="@string/menu_action_map"/>

    <item
        android:id="@+id/action_event_search"
        android:orderInCategory="3"
        app:showAsAction="ifRoom"
        android:title="@string/menu_search_action"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:icon="@drawable/ic_search_white_24dp"/>
</menu>
