<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context="org.gophillygo.app.FilterDialog">
    <data>
        <!-- set up data binding to filter and dialog fragment -->
        <variable name="filter" type="org.gophillygo.app.data.models.Filter"/>
        <variable name="dialog" type="org.gophillygo.app.FilterDialog"/>
        <!-- imports to allow referencing within data binding expressions -->
        <import type="android.view.View"/>
    </data>

    <RelativeLayout
        style="@style/FilterModal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/filter_modal_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@color/color_primary"
            android:weightSum="3">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/filter_modal_reset_button"
                style="@style/BorderlessButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="@{dialog::resetFilters}"
                android:text="@string/reset_button" />

            <TextView
                style="@style/FilterModalTitle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/many_filter_button_title" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/filter_modal_done_button"
                style="@style/BorderlessButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="@{v -> dialog.dismiss()}"
                android:text="@string/done_button" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/filter_modal_category_button_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill_horizontal"
            android:layout_below="@+id/filter_modal_top"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="8dp">

            <org.gophillygo.app.GpgToggleButton
                android:id="@+id/filter_modal_nature_category_button"
                style="@style/ToggleFilterButton"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/filter_modal_exercise_category_button"
                android:checked="@{filter.nature}"
                android:text="@string/nature_category_label"
                app:onCheckedChanged="@{(v, checked) -> filter.setNature(checked)}" />

            <org.gophillygo.app.GpgToggleButton
                android:id="@+id/filter_modal_exercise_category_button"
                style="@style/ToggleFilterButton"
                android:layout_centerHorizontal="true"
                android:checked="@{filter.exercise}"
                android:text="@string/exercise_category_label"
                app:onCheckedChanged="@{(v, checked) -> filter.setExercise(checked)}" />

            <org.gophillygo.app.GpgToggleButton
                android:id="@+id/filter_modal_educational_category_button"
                style="@style/ToggleFilterButton"
                android:layout_toEndOf="@id/filter_modal_exercise_category_button"
                android:layout_alignParentEnd="true"
                android:checked="@{filter.educational}"
                android:text="@string/educational_category_label"
                app:onCheckedChanged="@{(v, checked) -> filter.setEducational(checked)}" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/filter_modal_options_activities_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/filter_modal_category_button_bar"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:weightSum="3">

            <org.gophillygo.app.GpgToggleButton
                android:id="@+id/filter_modal_options_cycling_button"
                style="@style/ToggleFilterButton"
                android:layout_weight="1"
                android:checked="@{filter.cycling}"
                app:onCheckedChanged="@{(v, checked) -> filter.setCycling(checked)}"
                android:text="@string/cycling_activity_label" />

            <org.gophillygo.app.GpgToggleButton
                android:id="@+id/filter_modal_options_hiking_button"
                style="@style/ToggleFilterButton"
                android:layout_weight="1"
                android:checked="@{filter.hiking}"
                app:onCheckedChanged="@{(v, checked) -> filter.setHiking(checked)}"
                android:text="@string/hiking_activity_label" />

            <org.gophillygo.app.GpgToggleButton
                android:id="@+id/filter_modal_options_water_recreation_button"
                style="@style/ToggleFilterButton"
                android:layout_weight="1"
                android:checked="@{filter.waterRecreation}"
                app:onCheckedChanged="@{(v, checked) -> filter.setWaterRecreation(checked)}"
                android:text="@string/water_recreation_activity_label" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/filter_modal_options_category_button_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/filter_modal_options_activities_bar"
            android:layout_marginTop="8dp"
            android:weightSum="2">

            <org.gophillygo.app.GpgToggleButton
                android:id="@+id/filter_modal_been_button"
                style="@style/ToggleFilterButton"
                android:checked="@{filter.been}"
                android:layout_weight="1"
                app:onCheckedChanged="@{(v, checked) -> filter.setBeen(checked)}"
                android:text="@string/place_been_option" />

            <org.gophillygo.app.GpgToggleButton
                android:id="@+id/filter_modal_want_to_go_button"
                style="@style/ToggleFilterButton"
                android:layout_weight="1"
                android:checked="@{filter.wantToGo}"
                app:onCheckedChanged="@{(v, checked) -> filter.setWantToGo(checked)}"
                android:text="@string/place_want_to_go_option" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/filter_modal_options_flag_button_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/filter_modal_options_category_button_bar"
            android:layout_marginBottom="8dp"
            android:weightSum="2">

            <org.gophillygo.app.GpgToggleButton
                android:id="@+id/filter_modal_not_interested_button"
                style="@style/ToggleFilterButton"
                android:layout_weight="1"
                android:checked="@{filter.notInterested}"
                app:onCheckedChanged="@{(v, checked) -> filter.setNotInterested(checked)}"
                android:text="@string/place_not_interested_option" />

            <org.gophillygo.app.GpgToggleButton
                android:id="@+id/filter_modal_liked_button"
                style="@style/ToggleFilterButton"
                android:layout_weight="1"
                android:checked="@{filter.liked}"
                app:onCheckedChanged="@{(v, checked) -> filter.setLiked(checked)}"
                android:text="@string/place_liked_option" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/filter_modal_options_accessible_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/filter_modal_options_flag_button_bar"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:weightSum="1">

            <org.gophillygo.app.GpgToggleButton
                android:id="@+id/filter_modal_accessible_button"
                style="@style/ToggleFilterButton"
                android:layout_weight="1"
                android:checked="@{filter.accessible}"
                app:onCheckedChanged="@{(v, checked) -> filter.setAccessible(checked)}"
                android:text="@string/accessible_filter_button_title" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/filter_modal_options_watershed_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/filter_modal_options_accessible_bar"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:weightSum="1">
            <org.gophillygo.app.GpgToggleButton
                android:id="@+id/filter_modal_watershed_alliance_button"
                style="@style/ToggleFilterButton"
                android:layout_weight="1"
                android:checked="@{filter.watershedAlliance}"
                app:onCheckedChanged="@{(v, checked) -> filter.setWatershedAlliance(checked)}"
                android:text="@string/watershed_alliance_label" />
        </com.google.android.material.button.MaterialButtonToggleGroup>
    </RelativeLayout>
</layout>
